istio/cdn-v1/manifests/service-b-vs.yaml
#ai generated
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: service-b
  namespace: cdn-poc
spec:
  hosts:
  - api.poc.local

  gateways:
  - cdn-poc-gateway

  http:
  - match:
        - uri:
            prefix: /user
    route:
    - destination:
        host: service-b
        port:
          number: 80
